# modal-filesystem-tesing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
modal_fs_testing/: infer.py  model.py  server.py  train.py
